// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`counters fallback to 0 if no config values 1`] = `
<div
  data-v-app=""
>
  
  <div
    class="personal-dashboard-impact__container"
  >
    <div
      class="personal-dashboard-impact__category"
    >
      <div
        class="personal-dashboard-impact__value"
      >
        <span
          class="cdx-icon cdx-icon--medium"
        >
          <svg
            aria-hidden="true"
            height="20"
            viewBox="0 0 20 20"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <!--v-if-->
            <g>
              <path
                d="M18 0H2a2 2 0 00-2 2v18l4-4h14a2 2 0 002-2V2a2 2 0 00-2-2m-4 4a1.5 1.5 0 11-1.5 1.5A1.5 1.5 0 0114 4M6 4a1.5 1.5 0 11-1.5 1.5A1.5 1.5 0 016 4m4 8c-2.61 0-4.83-.67-5.65-3h11.3c-.82 2.33-3.04 3-5.65 3"
              />
            </g>
          </svg>
        </span>
        <a
          href="/w/index.php?title=Special%3ALog&type=thanks&user=TestUser"
          id="personal-dashboard-thanks-link"
          target="_blank"
        >
          0
        </a>
      </div>
      <div
        class="personal-dashboard-impact__name"
      >
        <div>
          ⧼personal-dashboard-impact-thanks-sent⧽
        </div>
      </div>
    </div>
    <div
      class="personal-dashboard-impact__divider"
    />
    <div
      class="personal-dashboard-impact__category"
    >
      <div
        class="personal-dashboard-impact__value"
      >
        <span
          class="cdx-icon cdx-icon--medium"
        >
          <svg
            aria-hidden="true"
            height="20"
            viewBox="0 0 20 20"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <!--v-if-->
            <g>
              <path
                d="m.29 12.71 1.42-1.42 2.22 2.22 8.3-10.14 1.54 1.26-9.7 11.86zM12 10h5v2h-5zm-3 4h5v2H9zm6-8h5v2h-5z"
              />
            </g>
          </svg>
        </span>
        <div>
          0
        </div>
      </div>
      <div
        class="personal-dashboard-impact__name"
      >
        <div>
          ⧼personal-dashboard-impact-edits-reviewed⧽
        </div>
        <button
          aria-label="⧼personal-dashboard-impact-info-button⧽"
          class="cdx-button cdx-button--action-default cdx-button--weight-quiet cdx-button--size-small cdx-button--icon-only"
        >
          
          <span
            class="cdx-icon cdx-icon--medium"
          >
            <svg
              aria-hidden="true"
              height="20"
              viewBox="0 0 20 20"
              width="20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <!--v-if-->
              <g>
                <path
                  d="M4 10a6 6 0 1012 0 6 6 0 00-12 0m6-8a8 8 0 110 16 8 8 0 010-16m1 7v5H9V9zm0-1V6H9v2z"
                />
              </g>
            </svg>
          </span>
          
        </button>
      </div>
    </div>
  </div>
  <!--teleport start-->
  <!--teleport end-->
  
</div>
`;

exports[`mount component 1`] = `
<div
  data-v-app=""
>
  
  <div
    class="personal-dashboard-impact__container"
  >
    <div
      class="personal-dashboard-impact__category"
    >
      <div
        class="personal-dashboard-impact__value"
      >
        <span
          class="cdx-icon cdx-icon--medium"
        >
          <svg
            aria-hidden="true"
            height="20"
            viewBox="0 0 20 20"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <!--v-if-->
            <g>
              <path
                d="M18 0H2a2 2 0 00-2 2v18l4-4h14a2 2 0 002-2V2a2 2 0 00-2-2m-4 4a1.5 1.5 0 11-1.5 1.5A1.5 1.5 0 0114 4M6 4a1.5 1.5 0 11-1.5 1.5A1.5 1.5 0 016 4m4 8c-2.61 0-4.83-.67-5.65-3h11.3c-.82 2.33-3.04 3-5.65 3"
              />
            </g>
          </svg>
        </span>
        <a
          href="/w/index.php?title=Special%3ALog&type=thanks&user=TestUser"
          id="personal-dashboard-thanks-link"
          target="_blank"
        >
          1,234
        </a>
      </div>
      <div
        class="personal-dashboard-impact__name"
      >
        <div>
          ⧼personal-dashboard-impact-thanks-sent⧽
        </div>
      </div>
    </div>
    <div
      class="personal-dashboard-impact__divider"
    />
    <div
      class="personal-dashboard-impact__category"
    >
      <div
        class="personal-dashboard-impact__value"
      >
        <span
          class="cdx-icon cdx-icon--medium"
        >
          <svg
            aria-hidden="true"
            height="20"
            viewBox="0 0 20 20"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <!--v-if-->
            <g>
              <path
                d="m.29 12.71 1.42-1.42 2.22 2.22 8.3-10.14 1.54 1.26-9.7 11.86zM12 10h5v2h-5zm-3 4h5v2H9zm6-8h5v2h-5z"
              />
            </g>
          </svg>
        </span>
        <div>
          4,321
        </div>
      </div>
      <div
        class="personal-dashboard-impact__name"
      >
        <div>
          ⧼personal-dashboard-impact-edits-reviewed⧽
        </div>
        <button
          aria-label="⧼personal-dashboard-impact-info-button⧽"
          class="cdx-button cdx-button--action-default cdx-button--weight-quiet cdx-button--size-small cdx-button--icon-only"
        >
          
          <span
            class="cdx-icon cdx-icon--medium"
          >
            <svg
              aria-hidden="true"
              height="20"
              viewBox="0 0 20 20"
              width="20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <!--v-if-->
              <g>
                <path
                  d="M4 10a6 6 0 1012 0 6 6 0 00-12 0m6-8a8 8 0 110 16 8 8 0 010-16m1 7v5H9V9zm0-1V6H9v2z"
                />
              </g>
            </svg>
          </span>
          
        </button>
      </div>
    </div>
  </div>
  <!--teleport start-->
  <!--teleport end-->
  
</div>
`;
